@@ -134,7 +134,7 @@ LINK test2_dual
 	INBWFORMAT {link:this:bandwidth_in:%k} of {link:this:max_bandwidth_in:%k}
 	OUTBWFORMAT {link:this:bandwidth_out:%k} of {link:this:max_bandwidth_out:%k}
 	BWSTYLE angled
-	TARGET /usr/local/share/cacti/rra/localhost_traffic_in_17.rrd
+	TARGET scale:-1:/usr/local/share/cacti/rra/localhost_traffic_in_17.rrd
 	NODES node00364 node00352
 
 
